<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.LoginActivity"
        android:background="@color/background"
>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true">
                <ImageView
                        android:id="@+id/brand"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/brand"/>

                <TextView
                        android:id="@+id/welcome"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:fontFamily="@font/robotomight"
                        android:textSize="22sp"
                        android:textColor="@color/colorTitleText"
                />

                <EditText
                        android:fontFamily="@font/robotomedium"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="40dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_below="@id/welcome"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/email"
                />

                <EditText
                        android:fontFamily="@font/robotomedium"
                        android:inputType="textPassword"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_below="@id/email"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/password"
                />

                <TextView
                        android:id="@+id/textForgot"
                        android:layout_below="@id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:clickable="true"
                        android:layout_marginRight="20dp"
                        android:text="@string/forgot_password"
                        android:textAllCaps="false"
                        android:fontFamily="@font/robotomedium"
                        android:background="@color/background"

                />

                <Button
                        android:background="@drawable/buttongreen"
                        android:id="@+id/btnLogin"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:fontFamily="@font/robotomedium"
                        android:layout_marginHorizontal="59dp"
                        android:layout_below="@id/password"
                        android:layout_marginTop="40dp"
                        android:layout_width="match_parent"
                        android:textColor="@color/textButtonColor"
                        android:layout_height="56dp"
                        android:textSize="15sp"/>

                <Button
                        android:background="@drawable/buttonblue"
                        android:id="@+id/btnRegister"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:fontFamily="@font/robotomedium"
                        android:layout_marginHorizontal="59dp"
                        android:layout_below="@id/btnLogin"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:textSize="15sp"
                        android:textColor="@color/textButtonColor"/>


                <ProgressBar
                        android:layout_marginTop="20dp"
                        android:visibility="gone"
                        android:id="@+id/progress"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_below="@id/btnRegister"
                        android:layout_centerHorizontal="true"

                        />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>