<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:background="@color/white">


        <TextView
                android:id="@+id/texttitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/addtask_addnewtask"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/texttitle"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/robotomedium"
                        android:hint="@string/addtask_title"
                        android:textSize="20sp" />


                <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/robotomedium"
                        android:hint="@string/addtask_description"
                        android:lines="10"
                        android:maxLines="10"
                        android:minLines="6"
                        android:textSize="20sp" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@color/colorPrimaryDark" />

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/projects"
                        android:layout_width="match_parent"
                        android:layout_height="62dp">

                </android.support.v7.widget.RecyclerView>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@color/colorPrimaryDark" />

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:background="@color/white"
                        android:fontFamily="@font/robotomedium"
                        android:text="@string/addtask_selectdate"
                        android:textAllCaps="false"
                        android:textSize="13sp"></Button>

                <Button
                        android:id="@+id/add"
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/buttonblue"
                        android:fontFamily="@font/robotomedium"
                        android:text="@string/addtask_addtask"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

    <ImageButton
            android:id="@+id/closeTask"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:background="@color/transparent"
            android:src="@drawable/closetask">

    </ImageButton>

</RelativeLayout>
